infra/compute.tf
resource "google_compute_address" "static" {
  name   = "recipes-ip"
  region = var.region
}

resource "google_compute_instance" "app" {
  name         = "recipes-server"
  machine_type = "e2-micro"
  zone         = var.zone

  boot_disk {
    initialize_params {
      image = "ubuntu-os-cloud/ubuntu-2204-lts"
      size  = 30
    }
  }

  network_interface {
    network    = google_compute_network.main.id
    subnetwork = google_compute_subnetwork.main.id
    access_config {
      nat_ip = google_compute_address.static.address
    }
  }

  metadata = {
    ssh-keys = "ubuntu:${var.ssh_public_key}"
    user-data = templatefile("${path.module}/cloud-init.yaml.tpl", {
      repo_url                 = var.repo_url
      database_url             = var.database_url
      tunnel_token             = var.tunnel_token
      ssh_host_ed25519_private = var.ssh_host_ed25519_private
      ssh_host_ed25519_public  = var.ssh_host_ed25519_public
    })
  }
}
